# QTSDK

./: .gitignore  CMakeLists.txt  QTSDK.sln  readme.md
QTSDK/: QTSDK.cpp  QTSDK.vcxproj  QTSDK.vcxproj.filters  arghandler.cpp  disney24.cpp  general.h  stringtools.cpp
QTSDK/CIncludes/: CGBase.h  ConditionalMacros.h  CoreAudioTypes.h  MacMemory.h  Math64.h  Movies.h  fp.h
QTSDK/CIncludes/CoreFoundation/: CFBase.h
QTSDK/Release/: QTSDK.exe.recipe  QTSDK.iobj  QTSDK.ipdb
QTSDK/Release/QTSDK.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  QTSDK.lastbuildstate  QTSDK.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: QTSDK.iobj  QTSDK.ipdb  Scratch.iobj  Scratch.ipdb
Scratch/: Disney.h  Scratch.cpp  Scratch.vcxproj  Scratch.vcxproj.filters  disney24.cpp  general.h  test.c
Scratch/Release/: Scratch.exe.recipe
Scratch/Release/Scratch.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Scratch.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Scratch/includes/: Disney.h
